--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "main": "bitcore.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/zbad405/bitcore.git"
+    "url": "https://github.com/wmcbain/bitcore.git#zetcore"
   },
   "scripts": {
     "install": "node-gyp rebuild",
